# dnd_5etools_rs

./: Cargo.toml
api/: Cargo.toml
api/src/: entry.rs  lib.rs  string.rs
api/src/entry/: error.rs  impls.rs  kinds.rs  render.rs
api/src/entry/kinds/: ability.rs  actions.rs  attack.rs  bonus.rs  data.rs  dice.rs  entries.rs  flow.rs  homebrew.rs  hr.rs  image.rs  ingredient.rs  inline.rs  inset.rs  item.rs  link.rs  list.rs  opt_feature.rs  options.rs  quote.rs  refs.rs  section.rs  spellcasting.rs  table.rs  variant.rs
api/src/entry/kinds/link/: external.rs  internal.rs
api/src/string/: error.rs  lexer.rs  render.rs  tags.rs
api/src/string/render/: default.rs  utils.rs
api/src/util/: additional_spells.rs  damage_types.rs  fluff.rs  proficiencies.rs
api/src/util/ability/: serde_full.rs
api/src/util/proficiencies/: weapons.rs
src/: entry.rs  lib.rs  serde_utils.rs  strings.rs  test_utils.rs  util.rs
src/entry/: kinds.rs  util.rs
src/entry/kinds/: ability.rs  actions.rs  attack.rs  bonus.rs  dice.rs  entries.rs  flow.rs  homebrew.rs  image.rs  ingredient.rs  inline.rs  inset.rs  item.rs  link.rs  list.rs  opt_feature.rs  options.rs  quote.rs  refs.rs  section.rs  spellcasting.rs  table.rs  variant.rs
src/string/: error.rs  lexer.rs  render.rs
src/strings/: lexer.rs  render.rs
src/strings/render/: default.rs
src/util/: ability.rs  conditions.rs  copy.rs  meta_block.rs  optional_features.rs  prerequisites.rs  sources.rs  speed.rs  starting_equipment.rs
src/util/ability/: serde_abbrev.rs
tests/: render_string.rs
(+4 files in other folders)
