[package]
name = "dnd_5etools_rs"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["api"]

[dependencies]
api = { path = "api" }

[dev-dependencies]
test-case = "1.1.0"
