[package]
name = "api"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.1"
logos = "0.12.0"
paste = "1.0.5"
serde_json = "1.0.64"
serde_with = "1.9.1"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dev-dependencies]
test-case = "1.1.0"